AWS/1_create_ec2/vpc.tf
resource "aws_vpc" "myvpc" {
    cidr_block = var.vpc_cidr
   
      tags = {
    Name = "myvpc_vibin"
  }
}
